--- a/speechToTextSampleCode/java-android/app/src/main/res/values/strings.xml
+++ b/speechToTextSampleCode/java-android/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">APP Kanojo</string>
+
+    <string name="welcome_audio_1">APP Kanojo</string>
+    <string name="welcome_audio_2">APP Kanojo</string>
+    <string name="successful_audio_1">APP Kanojo</string>
+    <string name="successful_audio_2">APP Kanojo</string>
 </resources>
