--- a/speechToTextSampleCode/java-android/app/src/main/res/values/strings.xml
+++ b/speechToTextSampleCode/java-android/app/src/main/res/values/strings.xml
@@ -1,8 +1,5 @@
 <resources>
     <string name="app_name">APP Kanojo</string>
 
-    <string name="welcome_audio_1">APP Kanojo</string>
-    <string name="welcome_audio_2">APP Kanojo</string>
-    <string name="successful_audio_1">APP Kanojo</string>
-    <string name="successful_audio_2">APP Kanojo</string>
+    <string name="listening_text">I am listening! ......</string>
 </resources>
